# runcrate

./: .buildinfo  .gitignore  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini  usage.html
.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  usage.doctree
.doctrees/reference/: index.doctree  main.doctree
.github/: pull_request_template.rst
.github/workflows/: ci.yml  docs.yml  release.yml  version-bump-and-package.yml
_sources/: index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/reference/: main.rst.txt
cwl/conditional_wf/: revsortlcase-job.yml  revsortlcase.cwl  sorttool.cwl
cwl/dirarray/: README.md  dirdate.cwl  params.yml  wf.cwl
cwl/greprevgrep/: greprevgrep.cwl  params.yml
cwl/grepsort/: README.md  grepsort.cwl  greptool.cwl  params.yml  sorttool.cwl
cwl/grepucase/: ucasetool.cwl
cwl/multioutputsource/: datetool.cwl  params.yml  wf.cwl
cwl/multisource/: README.md  cattool.cwl
cwl/revsort_inline/: params.yml
cwl/step_valuefrom/: params.yml  sorttool.cwl  wf.cwl
cwl/type_zoo/: type_zoo.cwl  type_zoo.yml
devtools/: check_changelog.py
docs/: conf.py  how_to_use_the_template.rst  index.rst  installation.rst  the_rationale_behind.rst  usage.rst
docs/nonlisted/: badges.rst  ci_platforms.rst  project_layout.rst  readthedocs.rst
docs/reference/: index.rst  libs.rst  main.rst
reference/: index.html  main.html
shex/: process-crate-0.1.shex  process-must.shex
src/runcrate/: __init__.py  cli.py  constants.py  convert.py  report.py  run.py  utils.py  validator.py
src/runcrate/converters/: __init__.py  base.py  cwl.py
src/runcrate/shex/: bioschemas-computationalworkflow-1.0.shex  process-crate-0.1.shex  provenance-crate-0.1.shex  workflow-crate-1.0.shex  workflow-run-crate-0.1.shex
tests/: __init__.py  conftest.py  test_1.py  test_cli.py  test_converter_base.py  test_cwlprov_crate_builder.py  test_make_crate.py  test_run.py  test_step_mapping.py  test_utils.py
tests/data/: README.md
tests/data/conditional-wf-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/conditional-wf-run-1/metadata/: manifest.json
tests/data/conditional-wf-run-1/snapshot/: lcasetool.cwl  revtool.cwl
tests/data/conditional-wf-run-1/workflow/: packed.cwl  primary-job.json  primary-output.json
tests/data/dirarray-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/dirarray-run-1-crate/: packed.cwl  primary-job.json  ro-crate-metadata.json
tests/data/dirarray-run-1/metadata/: directory-2b84a45d-de8f-4cf5-bf6e-618348e27600.ttl  directory-692edadf-5301-4b63-acf9-1a2b9b94b3a7.ttl  directory-822dcbf4-c768-4d5d-93c9-52a67bf6a243.ttl  directory-c5499180-8acd-45f9-856e-07ad42227425.ttl  manifest.json
tests/data/dirarray-run-1/workflow/: primary-job.json
tests/data/greprevgrep-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/greprevgrep-run-1/metadata/: manifest.json
tests/data/greprevgrep-run-1/snapshot/: greptool.cwl
tests/data/greprevgrep-run-1/workflow/: packed.cwl  primary-job.json  primary-output.json
tests/data/grepsort-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/grepsort-run-1/metadata/: manifest.json
tests/data/grepsort-run-1/snapshot/: grepsort.cwl  greptool.cwl  sorttool.cwl
tests/data/grepsort-run-1/workflow/: packed.cwl  primary-job.json  primary-output.json
tests/data/grepucase-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/grepucase-run-1/metadata/: directory-0f2f543c-695b-45c6-b31d-5c8740425f3c.ttl  directory-107dd13d-3630-4e81-bd71-026b638facbc.ttl  directory-3504fafc-d1b7-4165-a4d7-7a0c4bfbbe98.ttl  directory-378648cc-14bb-42ba-90e5-fbf9e4099a1c.ttl  directory-4ed2e115-3819-4223-b391-50c40fa8e7df.ttl  directory-5b25d2eb-2e89-4d62-8145-2ea3656ba173.ttl  directory-66dbb40f-d6d1-42db-8220-8b51ad4dd5ba.ttl  directory-79a136c8-0972-4775-a580-7bbcc534560e.ttl  directory-894a0b93-ea8e-40d5-b0fb-4923df529cca.ttl  directory-8cb9abec-9ecf-4e54-86b5-7f08a073ce60.ttl  directory-99571210-dcea-4991-bc3d-64b28f87a0d7.ttl  directory-a632ff01-ca44-453b-982f-96879f1b85ba.ttl  directory-a9ab8653-e354-4b7c-9bf8-0ae63766739b.ttl  manifest.json  (+5 more)
tests/data/multioutputsource-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/multisource-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/no-output-run-1-crate/: primary-job.json  ro-crate-metadata.json
tests/data/revsort-inline-cwl1.0-run-1/: bag-info.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/revsort-inline-cwl1.2-run-1/: bag-info.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/revsort-no-agent-name-run-1/: bag-info.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/revsort-optional-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/revsort-provenance-crate-minimal/: ro-crate-metadata.json
tests/data/step-valuefrom-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tests/data/type-zoo-run-1/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
tools/consume_crate/: consume_crate.py
(+139 files in other folders)
