[metadata]
name = runcrate
version = 0.1.0
license = Apache License, version 2.0 (Apache-2.0)
description =
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = ro-crate, workflow, provenance, CWL
classifiers = 
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

author = CRS4, RO-Crate community
author_email = ro-crate@elixir-europe.org
url = https://github.com/ResearchObject/runcrate
project_urls = {
    'webpage': 'https://github.com/ResearchObject/runcrate',
    #'Documentation': 'https://runcrate.readthedocs.io/en/latest/',
    'Changelog': 'https://github.com/ResearchObject/runcrate/blob/master/CHANGELOG.rst',
    'Issue Tracker': 'https://github.com/ResearchObject/runcrate/issues',
    'Discussion Forum': 'https://github.com/ResearchObject/runcrate/discussions',
}


[options]
zip_safe=False
include_package_data=True
packages=find:
package_dir=
    =src

python_requires='>=3.9, <4',

install_requires=
    "bdbag>=1.4.1"
    cwl-utils==0.13
    cwlprov==0.1.1
    networkx==2.8
    "prov>=1.5.1"
    rocrate==0.7.0


[options.packages.find]
where=src

[flake8]
ignore = E501
