[metadata]
name = runcrate
version = 0.1.0
license = Apache License, version 2.0 (Apache-2.0)
description = Workflow Run RO-Crate toolkit
long_description = Runcrate is a software toolkit to manipulate `Workflow Run RO-Crate <https://www.researchobject.org/workflow-run-crate/>`_ packages.
long_description_content_type = text/x-rst
keywords = ro-crate, workflow, provenance, CWL
classifiers = 
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
author = CRS4, RO-Crate community
author_email = ro-crate@elixir-europe.org
url = https://github.com/ResearchObject/runcrate

[options]
zip_safe=False
include_package_data=True
packages=find:
package_dir=
    =src

python_requires=>=3.8, <4

install_requires=
    bdbag>=1.4.1
    click~=8.1
    cwl-utils==0.13
    cwlprov==0.1.1
    networkx==2.8
    prov>=1.5.1
    rocrate~=0.7    
    rdflib~=6.2
    PyShEx~=0.8.1
    arcp~=0.2.1
    rdflib_shim>=1.0.3
    rocrateValidator @ git+https://github.com/ResearchObject/ro-crate-validator-py.git@v0.2.16-RC4
    importlib_resources~=5.12

[options.entry_points]
console_scripts=
    runcrate=runcrate.cli:cli

[options.packages.find]
where=src

[flake8]
ignore = E501
