[metadata]
name = runcrate
version = attr: runcrate.__version__
license = Apache License, version 2.0 (Apache-2.0)
description = Workflow Run RO-Crate toolkit
long_description = Runcrate is a software toolkit to manipulate `Workflow Run RO-Crate <https://www.researchobject.org/workflow-run-crate/>`_ packages. Documentation is at http://www.researchobject.org/runcrate/.
long_description_content_type = text/x-rst
keywords = ro-crate, workflow, provenance, CWL
classifiers = 
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
author = CRS4, RO-Crate community
author_email = ro-crate@elixir-europe.org
url = https://github.com/ResearchObject/runcrate

[options]
zip_safe=False
include_package_data=True
packages=find:
package_dir=
    =src

python_requires=>=3.8, <4

install_requires=
    bdbag>=1.4.1
    click~=8.1
    cwl-utils>=0.27
    cwlprov==0.1.1
    networkx==3.1
    prov>=1.5.1
    rocrate~=0.7

[options.entry_points]
console_scripts=
    runcrate=runcrate.cli:cli

[options.packages.find]
where=src

[flake8]
ignore = E501
